--- a/.firebaserc
+++ b/.firebaserc
@@ -2,6 +2,9 @@
   "projects": {
     "prod": "photomap24-21f9f",
     "dev": "photomap24-dev",
-    "default": "photomap24-dev"
-  }
+    "default": "photomap24-dev",
+    "ads": "ads24hour"
+  },
+  "targets": {},
+  "etags": {}
 }
